--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -820,10 +820,11 @@
         });
 
         describe('animated transitions', () => {
-          let router, observer;
+          let router, observer, data = [];
 
           beforeEach(() => {
             router = new Vaadin.Router(outlet);
+            observer = new window.MutationObserver(records => data = data.concat(records));
           });
 
           afterEach(() => {
@@ -839,8 +840,6 @@
 
             await router.render('/');
 
-            observer = new window.MutationObserver(() => {});
-
             observer.observe(outlet, {
               subtree: true,
               attributes: true,
@@ -850,7 +849,10 @@
 
             await router.render('/animate');
 
-            const data = observer.takeRecords();
+            // FIXME(web-padawan): force IE11 to pick up mutations
+            if (/Trident/.test(navigator.userAgent)) {
+              data = observer.takeRecords();
+            }
 
             expect(data.length).to.equal(4);
             expect(data[0].target.tagName).to.match(/x-home-view/i);
