--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -820,13 +820,15 @@
         });
 
         describe('animated transitions', () => {
-          let router;
+          let router, observer, data = [];
 
           beforeEach(() => {
             router = new Vaadin.Router(outlet);
+            observer = new window.MutationObserver(records => data = data.concat(records));
           });
 
           afterEach(() => {
+            observer.disconnect();
             router.unsubscribe();
           });
 
@@ -838,11 +840,6 @@
 
             await router.render('/');
 
-            let data;
-            const observer = new window.MutationObserver(mutations => {
-              data = mutations;
-            });
-
             observer.observe(outlet, {
               subtree: true,
               attributes: true,
@@ -851,6 +848,11 @@
             });
 
             await router.render('/animate');
+
+            // FIXME(web-padawan): force IE11 to pick up mutations
+            if (/Trident/.test(navigator.userAgent)) {
+              data = observer.takeRecords();
+            }
 
             expect(data.length).to.equal(4);
             expect(data[0].target.tagName).to.match(/x-home-view/i);
