--- a/test/router/router.spec.html
+++ b/test/router/router.spec.html
@@ -470,6 +470,24 @@
             expect(outlet.children).to.have.lengthOf(1);
             expect(outlet.children[0].tagName).to.match(/x-admin-view/i);
           });
+
+          it('should trigger a `vaadin-router:go` event on the `window` when Router.go() is called', () => {
+            const spy = sinon.spy();
+            window.addEventListener('vaadin-router:go', spy);
+            Vaadin.Router.go('');
+            window.removeEventListener('vaadin-router:go', spy);
+            expect(spy).to.have.been.called.once;
+            expect(spy.args[0][0]).to.have.property('type', 'vaadin-router:go');
+          });
+
+          it('should pass the given pathname in the `detail.pathname` property of the triggered event when Router.go() is called', () => {
+            const spy = sinon.spy();
+            window.addEventListener('vaadin-router:go', spy);
+            Vaadin.Router.go('/a');
+            window.removeEventListener('vaadin-router:go', spy);
+            expect(spy).to.have.been.called.once;
+            expect(spy.args[0][0]).to.have.deep.property('detail.pathname', '/a');
+          });
         });
 
         describe('route parameters', () => {
