--- a/demo/vaadin-router-redirect-demos.html
+++ b/demo/vaadin-router-redirect-demos.html
@@ -148,7 +148,7 @@
       </template>
     </vaadin-demo-snippet>
     <p>
-      NOTE: the same effect can be acheived by dispatching a <code>
+      NOTE: the same effect can be achieved by dispatching a <code>
       vaadin-router:go</code> custom event on the <code>window</code>. The
       target path should be provided as <code>event.detail.pathname</code>.
     </p>
