--- a/demo/vaadin-router-demo-shared-styles.html
+++ b/demo/vaadin-router-demo-shared-styles.html
@@ -12,3 +12,25 @@
     </style>
   </template>
 </dom-module>
+
+<dom-module id="vaadin-router-demo-nested-styles">
+  <template>
+    <style>
+      :host {
+        display: flex;
+        flex-direction: column;
+        background: #ddd;
+        padding: 5px;
+        min-height: 100vh;
+      }
+
+      main {
+        margin-top: 10px;
+        padding: 5px;
+        background: #fff;
+        flex: 1 0 auto;
+        min-height: 80px;
+      }
+    </style>
+  </template>
+</dom-module>
